[package]
name = "libunwind-sys"
version = "0.5.1"
authors = [ "Alec Davis <unlikelytitan@gmail.com>" ]
edition = "2021"
build = "build.rs"
categories = [ "external-ffi-bindings" ]
description = "Low-level bindings for the libunwind library"
readme = "README.md"
keywords = [ "ffi", "backtrace","stacktrace","coredump"]
repository = "https://github.com/Ki11erRabbit/libunwind-sys.git"
homepage = "https://github.com/Ki11erRabbit/libunwind-sys.git"
license = "MIT"
exclude = ["/data"]

[features]
ptrace = []
[dependencies]
libc = "^0.2"

[build-dependencies]
bindgen = "^0.71"
fs_extra = "^1.3"
autotools = "^0.2"

